添加示例： 从fore进程ipc到back进程之后启动一个Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.arch.androidipc">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:name="com.arch.application.IPCApplication"
         android:allowBackup="true"
@@ -31,7 +32,6 @@
                 <action android:name="com.arch.ipccenter.back.BackEngine" />
             </intent-filter>
         </service>
-
         <service
             android:name="com.arch.ipccenter.fore.ForeService"
             android:exported="false"
@@ -41,7 +41,10 @@
             </intent-filter>
         </service>
 
-
+        <activity
+            android:name=".BackExActivity"
+            android:label="@string/title_activity_back_ex"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
